--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tanstack/react-table": "^8.20.6",
     "@types/react-modal": "^3.16.3",
+    "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "browser-image-compression": "^2.0.2",
+    "postcss": "^8.4.49",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loading": "^2.0.3",
