--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router": "^7.0.2",
     "react-router-dom": "^7.0.2",
     "react-select": "^5.9.0",
+    "react-tiny-popover": "^8.1.4",
     "react-toastify": "^10.0.6",
     "xlsx": "^0.18.5"
   },
