--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.1.6",
     "@tanstack/react-table": "^8.20.6",
     "@types/react-modal": "^3.16.3",
     "autoprefixer": "^10.4.20",
